--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "-": "0.0.1",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/polyfill": "^7.12.1",
     "normalize.css": "^8.0.1"
   }
